--- a/index.html
+++ b/index.html
@@ -3,5 +3,16 @@
 <body>
   <h1>welcome to the biz</h1>
   <p>i'm gabriel thompson, and this is my website</p>
+  <br></br>
+  <p><i>links:</i></p>
+  <a href='https://github.com/gthompson30'>github</a>
+  <a href='https://devpost.com/gthompson30'>devpost</a>
+  <a href='https://replit.com/@GabrielThompso2'>repl.it</a>
+  <a href='https://instagram.com/gabriel.thompson2023'>instagram</a>
+  <a href='https://twitter.com/Gabriel69290466'>twitter</a>
+  <a href='https://namemc.com/profile/pomeranian99.1'>minecraft</a>
+  
+  <p><i>you can contact me at:</i></p>
+  <p>gabrielezrathompson@gmail.com</p>
 </body>
 </html>
