--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <p><a href='https://devpost.com/gthompson30'>devpost</a></p>
   <p><a href='https://replit.com/@GabrielThompso2'>repl.it</a></p>
   <p><a href='https://instagram.com/gabriel.thompson2023'>instagram</a></p>
-  <p><a href='https://twitter.com/Gabriel69290466'>twitter</a></p>
+  <p><a href='https://twitter.com/TheSon_Of_Thomp'>twitter</a></p>
   <p><a href='https://namemc.com/profile/pomeranian99.1'>minecraft</a></p>
   
   <p><i>you can contact me at:</i></p>
