--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <p><a href='https://instagram.com/gabriel.thompson2023'>instagram</a></p>
   <p><a href='https://twitter.com/TheSon_Of_Thomp'>twitter</a></p>
   <p><a href='https://namemc.com/profile/pomeranian99.1'>minecraft</a></p>
+  <p><a href='https://en.wikipedia.org/wiki/User:MorganWyoming'>wikipedia</a></p>
   
   <p><i>you can contact me at:</i></p>
   <p>gabrielezrathompson@gmail.com</p>
