--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
   <p><a href='https://twitter.com/TheSon_Of_Thomp'>twitter</a></p>
   <p><a href='https://namemc.com/profile/pomeranian99.1'>minecraft</a></p>
   <p><a href='https://en.wikipedia.org/wiki/User:MorganWyoming'>wikipedia</a></p>
+  <p><a href='https://www.reddit.com/u/MorganWyoming'>reddit</a></p>
   
   <p><i>you can contact me at:</i></p>
-  <p>gabrielezrathompson@gmail.com</p>
+  <p>email: morganwyoming@gmail.com</p>
+  <p>discord: pomeranian99#5216</p>
 </body>
 </html>
