--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
   <br>
   
   <p><i>you can contact me at:</i></p>
-  <p>email: morganwyoming@gmail.com</p>
+  <p>email: gthompson30@stuy.edu</p>
 </body>
 </html>
