--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <p>i'm gabriel thompson, and this is my website</p>
   <br></br>
   <p><i>links:</i></p>
+  <p><a href='https://www.linkedin.com/in/gabriel-thompson-5238341b7/'>linkedin</a></p>
   <p><a href='https://github.com/gthompson30'>github</a></p>
   <p><a href='https://devpost.com/gthompson30'>devpost</a></p>
   <p><a href='https://replit.com/@GabrielThompso2'>repl.it</a></p>
