--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <body>
   <h1>welcome to the biz</h1>
   <p>i'm gabriel thompson, and this is my website</p>
+  <p>Very much WIP version of the website <a href="website/">here</a></p>
   <br></br>
   <p><i>links:</i></p>
   <p><a href='https://www.linkedin.com/in/gabriel-thompson-5238341b7/'>linkedin</a></p>
@@ -11,7 +12,8 @@
   <p><a href='https://replit.com/@GabrielThompso2'>repl.it</a></p>
   <p><a href='https://instagram.com/gabriel.thompson2023'>instagram</a></p>
   <p><a href='https://twitter.com/TheSon_Of_Thomp'>twitter</a></p>
-  <p><a href='https://www.reddit.com/u/MorganWyoming'>reddit</a></p>
+  <!-- Why did I decide to put my reddit here
+  <p><a href='https://www.reddit.com/u/MorganWyoming'>reddit</a></p> -->
   
   <br>
   
