--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <p><a href='https://github.com/gthompson30'>github</a></p>
   <p><a href='https://devpost.com/gthompson30'>devpost</a></p>
   <p><a href='https://replit.com/@GabrielThompso2'>repl.it</a></p>
-  <p><a href='https://instagram.com/gabriel.thompson2023'>instagram</a></p>
+  <p><a href='https://instagram.com/the.son.of.thomp'>instagram</a></p>
   <p><a href='https://twitter.com/TheSon_Of_Thomp'>twitter</a></p>
   <!-- Why did I decide to put my reddit here
   <p><a href='https://www.reddit.com/u/MorganWyoming'>reddit</a></p> -->
