--- a/test.html
+++ b/test.html
@@ -16,6 +16,7 @@
   </style>
 </head>
 <body>
+  <img src="rotated_snake.png"></img>
   <canvas></canvas>
   <script type="text/javascript" src="canvas.js"></script>
 </body>
