--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
   <h1>welcome to the biz</h1>
   <p>i'm gabriel thompson, and this is my website</p>
-  <p>Very much WIP version of the website <a href="website/">here</a></p>
+  <!--<p>Very much WIP version of the website <a href="website/">here</a></p>-->
   <br></br>
   <p><i>links:</i></p>
   <p><a href='https://www.linkedin.com/in/gabriel-thompson-5238341b7/'>linkedin</a></p>
