added blog linq

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <!--<p>Very much WIP version of the website <a href="website/">here</a></p>-->
   <br></br>
   <p><i>links:</i></p>
+  <p><a href='./blog/'>blog</a></p>
   <p><a href='https://www.linkedin.com/in/gabriel-thompson-5238341b7/'>linkedin</a></p>
   <p><a href='https://github.com/gthompson30'>github</a></p>
   <p><a href='https://devpost.com/gthompson30'>devpost</a></p>
