--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
   <p><i>you can contact me at:</i></p>
   <p>email: gthompson30@stuy.edu</p>
 
-  <div class="el-wrap x">
+  <!-- <div class="el-wrap x">
     <div class="el y">
       <center>
         <p><b>Gabriel Thompson Personal Website</b></p>
         <p>...under construction...</p>
       </center>
     </div>
-  </div>
+  </div> -->
 </body>
 </html>
