--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <p><i>links:</i></p>
   <p><a href='./blog/'>blog</a></p>
   <p><a href='https://www.linkedin.com/in/gabriel-thompson-5238341b7/'>linkedin</a></p>
-  <p><a href='https://github.com/gthompson30'>github</a></p>
+  <p><a href='https://github.com/sonofthomp'>github</a></p>
   <p><a href='https://devpost.com/gthompson30'>devpost</a></p>
   <p><a href='https://replit.com/@GabrielThompso2'>repl.it</a></p>
   <p><a href='https://instagram.com/the.son.of.thomp'>instagram</a></p>
