--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
   
   <p><i>you can contact me at:</i></p>
   <p>email: gthompson30@stuy.edu</p>
+  
+  <br><br><br>
+  
+  <div align='center'><a href='https://www.free-website-hit-counter.com'><img src='https://www.free-website-hit-counter.com/c.php?d=5&id=138380&s=1' border='0' alt='Free Website Hit Counter'></a><br / ><small><a href='https://www.free-website-hit-counter.com' title="Free Website Hit Counter">Free website hit counter</a></small></div>
 
   <!-- <div class="el-wrap x">
     <div class="el y">
