--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
   <!--<p>Very much WIP version of the website <a href="website/">here</a></p>-->
   <br></br>
   <p><i>links:</i></p>
+  <p><a href='cv.pdf'>cv</a></p>
   <p><a href='./blog/'>blog</a></p>
   <p><a href='https://www.linkedin.com/in/gabriel-thompson-5238341b7/'>linkedin</a></p>
   <p><a href='https://github.com/sonofthomp'>github</a></p>
