--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 </head>
 
 <body>
-  <h1>welcome to the biz</h1>
-  <p>i'm gabriel thompson, and this is my website</p>
+  <h1>hi, i'm gabriel thompson</h1>
+  <p>High school senior, web developer, musician, long-distance cyclist</p>
   <!--<p>Very much WIP version of the website <a href="website/">here</a></p>-->
   <br></br>
-  <p><i>links:</i></p>
+  <p><i>you can find me here:</i></p>
   <p><a href='cv.pdf'>cv</a></p>
   <p><a href='./blog/'>blog</a></p>
   <p><a href='https://www.linkedin.com/in/gabriel-thompson-5238341b7/'>linkedin</a></p>
