--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
   <p><a href='https://replit.com/@GabrielThompso2'>repl.it</a></p>
   <p><a href='https://instagram.com/the.son.of.thomp'>instagram</a></p>
   <p><a href='https://twitter.com/TheSon_Of_Thomp'>twitter</a></p>
+  
+  <p><a href='usaco-2023-for-ntarsis/p1.html'>usaco</a></p>
   <!-- Why did I decide to put my reddit here
   <p><a href='https://www.reddit.com/u/MorganWyoming'>reddit</a></p> -->
   
