--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
   <p><a href='https://twitter.com/TheSon_Of_Thomp'>twitter</a></p>
   
   <p><a href='usaco-2023-for-ntarsis/p1.html'>usaco</a></p>
+  <p><a href='test/test.txt'>yeet</a></p>
   <!-- Why did I decide to put my reddit here
   <p><a href='https://www.reddit.com/u/MorganWyoming'>reddit</a></p> -->
   
