--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
   <p><a href='https://instagram.com/the.son.of.thomp'>instagram</a></p>
   <p><a href='https://twitter.com/TheSon_Of_Thomp'>twitter</a></p>
   
+  <br><p><a href='/processing_projects/projects.html'></a></p>
+  
   <!-- Why did I decide to put my reddit here
   <p><a href='https://www.reddit.com/u/MorganWyoming'>reddit</a></p> -->
   
