--- a/processing_projects/projects.html
+++ b/processing_projects/projects.html
@@ -7,7 +7,7 @@
 <!-- StuyHacks snake -->
 <p><span style="font-size: 30px">Interactive snake</span> (created for StuyHacks website (my school's hack-a-thon) (<a href="https://openprocessing.org/sketch/1406810">Link to project</a>)</p>
 
-<iframe src="https://openprocessing.org/sketch/1406810/embed/" width="800" hezight="800"></iframe>
+<iframe src="https://openprocessing.org/sketch/1406810/embed/" width="800" height="800"></iframe>
 
 <!--  -->
 <p><span style="font-size: 30px">Mandelbrot Set Generator</span> (This specifically zooms on a Julia Set found within the larger Mandelbrot Set) (<a href="https://openprocessing.org/sketch/1831323">Link to project</a>)</p>
