--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
   <p><a href='https://replit.com/@GabrielThompso2'>repl.it</a></p>
   <p><a href='https://instagram.com/the.son.of.thomp'>instagram</a></p>
   <p><a href='https://twitter.com/TheSon_Of_Thomp'>twitter</a></p>
-  
-  <br><p><a href='/processing_projects/projects.html'></a></p>
+  <p><a href='https://letterboxd.com/sonofthomp/'>letterboxd</a></p>
   
   <!-- Why did I decide to put my reddit here
   <p><a href='https://www.reddit.com/u/MorganWyoming'>reddit</a></p> -->
