Added spotify, reorganized links

--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
   <p><a href='https://github.com/sonofthomp'>github</a></p>
   <p><a href='https://devpost.com/gthompson30'>devpost</a></p>
   <p><a href='https://replit.com/@GabrielThompso2'>repl.it</a></p>
+
+  <p><i>miscellaneous personal links:</i></p>
+  <p><a href='https://open.spotify.com/user/31niyjmqktx6m4bndfsm4w62s5gu?si=60d3aa9177194da3'>spotify</a></p>
   <p><a href='https://instagram.com/the.son.of.thomp'>instagram</a></p>
   <p><a href='https://twitter.com/TheSon_Of_Thomp'>twitter</a></p>
   <p><a href='https://letterboxd.com/sonofthomp/'>letterboxd</a></p>
