--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
   <p><a href='https://www.linkedin.com/in/gabriel-thompson-5238341b7/'>linkedin</a></p>
   <p><a href='https://github.com/sonofthomp'>github</a></p>
   <p><a href='https://devpost.com/gthompson30'>devpost</a></p>
-  <p><a href='https://replit.com/@GabrielThompso2'>repl.it</a></p>
+  <p><a href='https://replit.com/@GabrielThompso2'>repl.it</a></p><br>
 
-  <p><i>miscellaneous personal links:</i></p>
+  <p><i>misc. personal links:</i></p>
   <p><a href='https://open.spotify.com/user/31niyjmqktx6m4bndfsm4w62s5gu?si=60d3aa9177194da3'>spotify</a></p>
   <p><a href='https://instagram.com/the.son.of.thomp'>instagram</a></p>
   <p><a href='https://twitter.com/TheSon_Of_Thomp'>twitter</a></p>
@@ -65,7 +65,7 @@
   <br>
   
   <p><i>you can contact me at:</i></p>
-  <p>email: gthompson30@stuy.edu</p>
+  <p>email: gabrielezrathompson@gmail.com</p>
   
   <br><br>
   
