Moved to threads

--- a/index.html
+++ b/index.html
@@ -54,10 +54,11 @@
   <p><a href='https://replit.com/@GabrielThompso2'>repl.it</a></p><br>
 
   <p><i>misc. personal links:</i> </p>
+  <p><a href='https://www.threads.net/@the.son.of.thomp'>threads</a></p>
   <p><a href='https://open.spotify.com/user/31niyjmqktx6m4bndfsm4w62s5gu?si=60d3aa9177194da3'>spotify</a></p>
   <p><a href='https://instagram.com/the.son.of.thomp'>instagram</a></p>
-  <p><a href='https://twitter.com/TheSon_Of_Thomp'>twitter</a></p>
   <p><a href='https://letterboxd.com/sonofthomp/'>letterboxd</a></p>
+  <p><a href='https://twitter.com/TheSon_Of_Thomp'>twitter</a> (retired, moved to threads)</p>
   
   <!-- Why did I decide to put my reddit here
   <p><a href='https://www.reddit.com/u/MorganWyoming'>reddit</a></p> -->
