--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <body>
   <h1>hi, i'm gabriel thompson</h1>
-  <p>high school senior, web developer, music theory nerd, wikipedian, long-distance cyclist</p>
+  <p>first-year at the university of toronto. web developer, music theory nerd, and long-distance cyclist</p>
   <!--<p>Very much WIP version of the website <a href="website/">here</a></p>-->
   <br></br>
   <p><i>you can find me here:</i></p>
