Why do I still have my repl.it linked here

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <p><a href='https://www.linkedin.com/in/gabriel-thompson-5238341b7/'>linkedin</a></p>
   <p><a href='https://github.com/sonofthomp'>github</a></p>
   <p><a href='https://devpost.com/gthompson30'>devpost</a></p>
-  <p><a href='https://replit.com/@GabrielThompso2'>repl.it</a></p><br>
+  <p><a href='https://musescore.com/user/27451576'>musescore</a></p><br>
 
   <p><i>misc. personal links:</i> </p>
   <p><a href='https://www.threads.net/@the.son.of.thomp'>threads</a></p>
