--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <p><i>you can find me here:</i></p>
   <p><a href='cv.pdf'>cv</a></p>
   <p><a href='./blog/'>blog</a></p>
-  <p><a href='https://www.linkedin.com/in/gabriel-thompson-5238341b7/'>linkedin</a></p>
+  <p><a href='https://www.linkedin.com/in/sonofthomp/'>linkedin</a></p>
   <p><a href='https://github.com/sonofthomp'>github</a></p>
   <p><a href='https://devpost.com/gthompson30'>devpost</a></p>
   <p><a href='https://musescore.com/user/27451576'>musescore</a></p><br>
