--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 
   <p><i>misc. personal links:</i> </p>
   <p><a href='https://www.threads.net/@the.son.of.thomp'>threads</a></p>
+  <p><a href='https://www.last.fm/user/sonofthomp'>last.fm</a></p>
   <p><a href='https://open.spotify.com/user/31niyjmqktx6m4bndfsm4w62s5gu?si=60d3aa9177194da3'>spotify</a></p>
   <p><a href='https://instagram.com/the.son.of.thomp'>instagram</a></p>
   <p><a href='https://letterboxd.com/sonofthomp/'>letterboxd</a></p>
