--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <!--<p>Very much WIP version of the website <a href="website/">here</a></p>-->
   <br></br>
   <p><i>you can find me here:</i></p>
-  <p><a href='cv.pdf'>cv</a></p>
+  <p><a href='cv.pdf'>resume</a></p>
   <p><a href='./blog/'>blog</a></p>
   <p><a href='https://www.linkedin.com/in/sonofthomp/'>linkedin</a></p>
   <p><a href='https://github.com/sonofthomp'>github</a></p>
